@@ -40,6 +40,17 @@ For example, ``'[?]'`` matches the character ``'?'``.
    without actually storing them all simultaneously.
 
 
+.. function:: escape(pathname)
+
+   Escape all special characters (``'?'``, ``'*'`` and ``'['``).
+   This is useful if you want to match an arbitrary literal string that may
+   have special characters in it.  Special characters in drive/UNC
+   sharepoints are not escaped, e.g. on Windows
+   ``escape('//?/c:/Quo vadis?.txt')`` returns ``'//?/c:/Quo vadis[?].txt'``.
+
+   .. versionadded:: 3.4
+
+
 For example, consider a directory containing only the following files:
 :file:`1.gif`, :file:`2.txt`, and :file:`card.gif`.  :func:`glob` will produce
 the following results.  Notice how any leading components of the path are
